<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Inquiries</string>
    <string name="inquiry_title_new">New inquiry</string>
    <string name="inquiry_create_title">Create an inquiry</string>
    <string name="inquiry_create_yes">Yes</string>
    <string name="inquiry_create_no">No</string>
    <string name="inquiry_create_voice_recognition">weSPOT voice recognition...</string>

    <string name="inquiry_title_list">Open inquiries</string>

    <string name="common_title">Menu</string>
    <string name="badges_title_list">Badges awarded</string>

    <string name="actionbar_inquiry_list">Inquiry list</string>
    <string name="actionbar_inquiry">Inquiry</string>
    <string name="actionbar_list_data_collection_task">Data Collection Tasks</string>
    <string name="actionbar_list_data_collection_task_responses">Responses</string>

    <string name="login_user_hint">username</string>
    <string name="login_password_hint">password</string>


    <string name="data_collection_tasks">Data collection tasks</string>
    <string name="data_collection_task">Data collection task</string>
    <string name="data_collection_task_no_created">No data collection tasks yet</string>
    <string name="data_collection_task_no_enabled_created">Data collection disabled for the inquiry</string>
    <string name="data_collection_task_responses">Data collected</string>
    <string name="data_collection_dialog_title">Title</string>
    <string name="data_collection_dialog_description">Description</string>
    <string name="data_collection_dialog_ok">Save</string>
    <string name="data_collection_dialog_cancel">Cancel</string>
    <string name="data_collection_dialog_creating">Creating data collection task</string>
    <string name="data_collection_dialog_choose_action">Choose an action</string>

    <string name="phases_invite_new_friend">Invite friends</string>

    <string name="wrapper_myinquiry">My Inquiries</string>
    <string name="wrapper_mymedia">My media</string>
    <string name="wrapper_profile">Profile</string>
    <string name="wrapper_badges">Badges</string>
    <string name="wrapper_friends">Friends</string>

    <string name="menu_new_data_collection">New data collection</string>
    <string name="menu_new_question">New question</string>
    <string name="menu_refresh_data_collection">Refresh data collection</string>
    <string name="menu_refresh_questions">Refresh questions</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_refreshing">Synchronizing inquiries...</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">New</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_usersite_search">Search</string>
    <string name="menu_data_collection_collect_data_image">Image</string>
    <string name="menu_data_collection_collect_data_video">Video</string>
    <string name="menu_data_collection_collect_data_audio">Audio</string>
    <string name="menu_data_collection_collect_data_text">Text</string>
    <string name="menu_data_collection_collect_data_numeric">Numeric data</string>

    <string name="menu_refresh_list_friends">Refresh list friends</string>
    <string name="menu_refresh_request_sent">Request sent</string>
    <string name="menu_refreshing_list_friends">Synchronizing friends...</string>
    <string name="friends_add_friend">Add friend</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="profile_title">Profile</string>
    <string name="profile_picture_description">profile_picture</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_account_type">Account type</string>
    <string name="profile_localid">Local ID</string>
    <string name="profile_id">Id</string>
    <string name="profile_name_value">Angel Suarez Fernandez</string>
    <string name="profile_email_value">titogelo@gmail.com</string>
    <string name="profile_website_value">www.titogelo.es</string>
    <string name="texto_de_pruebas">Pruebasss</string>

    <string name="network_connection">Not network connection</string>
    <string name="not_implement_yet">Not implemented yet</string>

    <string name="search_hint">Search</string>

    <string name="wonder_moment_title">Click to capture your wonder moment</string>
    <string name="wonder_moment_membership">Membership</string>
    <string name="wonder_moment_membership_open">Open - Any user may join</string>
    <string name="wonder_moment_membership_closed">Closed - User must be invited</string>
    <string name="wonder_moment_visibility">Visibility</string>
    <string name="wonder_moment_save">Save</string>
    <string name="wonder_moment_cancel">Cancel</string>
    <string-array name="wonder_moment_visibility_array">
        <item>Inquiry members only</item>
        <item>Logged in users</item>
        <item>Public</item>
    </string-array>
    <string name="wonder_moment_record_voice">Record wonder moment</string>
    <string name="wonder_moment_date_placeholder">Set up date</string>
    <string name="wonder_moment_time_placeholder">Set up time</string>
    <string name="wonder_moment_title_placeholder">Click to setup the title</string>
    <string name="wonder_moment_location_placeholder">Click to setup the location</string>
    <string name="wonder_moment_content_placeholder">Describe what you are curious about right now </string>
    <string name="wonder_moment_latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="wonder_moment_no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="wonder_moment_play_services_available">Google Play services is available</string>
    <string name="wonder_moment_IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="wonder_moment_illegal_argument_exception">Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="wonder_moment_address_output_string">%1$s %2$s %3$s</string>
    <string name="wonder_moment_no_address_found">No address found for location</string>
    <string name="wonder_moment_placeholder_description">This is a self-guided, mobile created, inquiry. Please provide a description of the inquiry here.</string>
    <string name="wonder_moment_sync">Synchronizing and saving inquiry...</string>
    <string name="wonder_moment_enable_internet">Enable internet connection</string>
    <string name="wonder_moment_provide_description">Provide a proper description for the inquiry</string>
    <string name="wonder_moment_provide_title">Provide a proper title for the inquiry</string>

    <string name="inquiry_title_description">Description</string>
    <string name="inquiry_title_hypothesis">Hypothesis</string>
    <string name="inquiry_title_question">Question</string>
    <string name="inquiry_title_plan">Plan</string>
    <string name="inquiry_title_data">Collect data</string>
    <string name="inquiry_title_analyse">Analyse</string>
    <string name="inquiry_title_discuss">Discuss</string>
    <string name="inquiry_title_communicate">Chat</string>

    <string name="imageview_description">Image Thumbnail</string>
    <string name="splash_login_button">Login</string>
    <string name="splash_login_button_google">Login with Google</string>
    <string name="splash_login_button_linkedin">Linkedin</string>
    <string name="splash_login_button_facebook">Login with Facebook</string>

    <string name="icon_list">1</string>
    <string name="placeholder">placeholder</string>
    <string name="content">content</string>

    <string name="friends_friend_new">Add friend</string>
    <string name="friends_title_list">Friends</string>

    <string name="communication_title">Chat</string>
    <string name="communication_enter_message"></string>
    <string name="communication_enter_message_default">Type a message to start...</string>
    <string name="communication_showing_more_messages">Showing %1$d more messages</string>

    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="number_back">B</string>
    <string name="number_dot">.</string>
    <string name="number_submit">Submit</string>

    <string name="usersite_title_list">Users</string>
    <string name="sent_request_usersite_title_list">Friendship requested</string>
    <string name="usersite_menu_search">Searching user...</string>

    <string name="questions">Questions</string>

    <string name="new_question_title_dialog">New question</string>
    <string name="new_question_description_dialog">Additional details</string>
    <string name="new_question_tags_dialog">Tags</string>
    <string name="new_question_dialog_cancel">Cancel</string>
    <string name="new_question_dialog_ok">Save</string>
    <string name="question_dialog_creating">Saving new question</string>
    <string name="question_sync">Synchronizing and saving question...</string>
</resources>
