<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:background="@drawable/background"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_above="@+id/linear_layout_login_buttons"
                android:layout_alignParentLeft="true"/>

        <net.wespot.pim.utils.layout.CirclePageIndicator
                android:id="@+id/indicator"
                android:padding="10dip"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_above="@+id/linear_layout_login_buttons"
                android:layout_alignParentLeft="true"/>

    <RelativeLayout android:layout_width="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_centerInParent="true"
                  android:layout_marginBottom="10dp"
                  android:layout_marginTop="10dp"
            android:id="@+id/linear_layout_login_buttons">

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/login_wespot"
                android:clickable="true"
                android:textSize="13dp"
                android:contentDescription="@string/splash_login_button"
                android:text="@string/splash_login_button"
                android:src="@drawable/login_button_wespot"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        <ImageView android:id="@+id/or" android:layout_centerHorizontal="true" android:layout_below="@+id/login_wespot" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_or"/>

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/loginGoogle"
                android:clickable="true"
                android:textSize="13dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/or"
                android:src="@drawable/login_button_google"
                android:contentDescription="@string/splash_login_button"
                android:text="@string/splash_login_button_google"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/loginFacebook"
                android:clickable="true"
                android:textSize="13dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loginGoogle"
                android:src="@drawable/login_button_facebook"
                android:contentDescription="@string/splash_login_button"
                android:text="@string/splash_login_button_facebook"
                android:layout_margin="10dp"/>
    </RelativeLayout>


</RelativeLayout>